--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -2,27 +2,62 @@
 :root {
   font-family: 'Montserrat', sans-serif;
   --width_button: 100px;
-  --height_button: 50px;
-  --svg_size: 70px;
-
+  --height_button: 40px;
+  --svg_size: 60px;
+  --spotifyColor: #1DB954;
+  --niceBlue: rgba(0, 255, 255, 0.8);
+  --text-secondary-dark: rgb(139, 148, 158);
+  --text-secondary-light: rgb(71, 76, 80);
 }
 
 /* Dark Theme */
 [data-theme="dark"] {
   --bg-color: hsl(240, 5%, 4%);
   --text-color: #f5f5f5;
+  --text-secondary: var(--niceBlue);
   --hr-color: rgba(255, 255, 255, 0.5);
+  --box-shadow1: 0px 25px 20px -20px rgba(40, 197, 66, 0.45), 0 0 10px rgba(255, 255, 255, 0.2);
+  --carrousel-boxShadow: none;
+
+  /* Theme toggle button */
   --button-bg: linear-gradient(to bottom, hsl(240, 5%, 6%) 0%, hsl(240, 5%, 4%) 50%, hsl(240, 5%, 2%) 100%);
   --outline: 2px solid rgba(100, 0, 233, 0.6);
+  --glow: drop-shadow(0px 0px 7px rgba(0, 255, 255, 0.8));
+
+  /*Glass box alike in index route */
+  --glass-color: rgba(0, 0, 0, 0.3);
+  --glass-textColor: rgba(255, 255, 255, 0.3);
+  --search-iconColor: rgba(0, 255, 255, 0.8);
+  --search-iconFilter: drop-shadow(0px 0px 10px rgba(0, 255, 255, 0.8));
 }
 
 /* Light Theme */
 [data-theme="light"] {
   --bg-color: rgba(255, 255, 255, 0.479);
   --text-color: black;
+  --text-secondary: var(--text-secondary-light);
   --hr-color: rgba(0, 0, 0, 0.5);
+  --box-shadow1: 13px 13px 10px -4px rgba(0, 0, 0, 0.4),
+                5px 3px 6px -2px rgba(0, 0, 0, 0.5),
+                inset 4px 15px 13px -14px rgba(255, 255, 255, 1),
+                0px 25px 25px -35px rgba(40, 197, 66, 0.575);
+
+  --box-shadow: 13px 13px 10px -4px rgba(0, 0, 0, 0.4),
+                5px 3px 6px -2px rgba(0, 0, 0, 0.5),
+                inset 4px 15px 13px -14px rgba(255, 255, 255, 1);
+
+  --carrousel-boxShadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+  
+  /* Theme toggle button */
   --button-bg: linear-gradient(to right, #222, #444);
   --outline: 2px solid hsla(204, 35%, 74%, 0.6);
+  --glow: drop-shadow(0px 0px 7px rgba(0, 255, 0, 0.8));
+
+  /*Glass box alike in index route */
+  --glass-color: linear-gradient(135deg, rgba(255, 253, 253, 0.24), rgba(255, 253, 253, 0.1));
+  --glass-textColor: rgba(0, 0, 0, 0.4);
+  --search-iconColor: rgb(35, 136, 204);
+  --search-iconFilter: drop-shadow(0px 0px 10px rgb(14, 156, 212));
 }
 
 /* Global Styles */
@@ -75,13 +110,14 @@ body::-webkit-scrollbar-thumb {
 
 /* nav Navbar > ul navbar_nav > li nav_item > a nav_link > items inside link logo / infotext*/
 #navbar {
+  position: relative;
   height: 6rem;
   width: 100%;
   top: 0;
   background-color: hsl(240, 5%, 4%);
   display: flex; 
   align-items: flex-start; 
-  padding-top: 1rem;
+  padding-top: 0.9rem;
   transition: opacity 2s ease-in-out;
   z-index: 100;
 }
@@ -99,14 +135,11 @@ body::-webkit-scrollbar-thumb {
   margin: 0 1%;
 }
 
-.nav-item:nth-child(2) {
-  margin-block: auto;
-} 
 
 .nav-link {
   text-decoration: none;
   width: 5.5rem;
-  color: #f5f5f5;
+  color: rgba(0, 255, 255, 0.8);
   display: flex;
   flex-direction: column; 
   align-items: center;
@@ -120,6 +153,13 @@ body::-webkit-scrollbar-thumb {
 
 .nav-item:last-child {
   margin-right: auto;
+}
+
+.nav-item:nth-child(2) {
+  position: absolute;
+  left: 5px;
+  top: 50%;
+  transform: translateY(calc(-50% + 1.6rem));
 }
 
 /* Display the text only after hover */
@@ -145,6 +185,7 @@ input[type="checkbox"]#theme_toggle + label {
   position: relative;
   display: flex; 
   transform: scaleX(-1);
+  filter: drop-shadow(0px 0px 6px rgba(0, 255, 255, 0.8));
   transition: opacity .4s ease-in-out;
 }
 
@@ -156,14 +197,13 @@ input[type="checkbox"]#theme_toggle + label::before {
   border-radius: calc(max(var(--height_button), var(--width_button)) / 2);
   cursor: pointer;
   transition: box-shadow 1s ease-in-out;
-  outline: var(--outline);
-  opacity: .5;
+  outline: 2px solid var(--niceBlue);
 }
 
-input[type="checkbox"]#theme_toggle + label:hover::before {
-  opacity: .7;
-  outline: 3px solid rgba(33, 0, 233, .7);
+input[type="checkbox"]#theme_toggle + label:hover svg {
+  filter: drop-shadow(0px 0px 8px rgba(0, 255, 255, 0.6));
 }
+
 
 /* SVG styling */
 label svg {
@@ -175,16 +215,21 @@ label svg {
   filter: drop-shadow(.2px .2px 5px rgba(0, 120, 200, .5));
   transform: translateY(-50%);
   transition: transform 2s ease;
+
+
+  /* outline: 1px solid var(--niceBlue);
+  border-radius: 50%;
+  padding: 1px; */
 }
 
 
 /* ANIMATIONS: dynamically add in js scripts/js depending on checkbox state */
 .offsetCheck {
-  transform: translate(calc(var(--width_button) - var(--svg_size)), -50%) rotate(360deg);    
+  transform: translate(calc(var(--width_button) - var(--svg_size)), -52%) rotate(360deg);    
 }
 
 .offsetUncheck {
-  transform: translate(0, -50%) rotate(-360deg);   
+  transform: translate(0, -52%) rotate(-360deg);   
 }
 
 @keyframes fadeIn {
