--- a/static/css/index.css
+++ b/static/css/index.css
@@ -222,6 +222,7 @@
   height: 40rem;
   display: grid;
   grid-template-columns: auto 1fr;
+  margin-top: 10rem;
 }
 
 .containerCard_row1 {
@@ -622,17 +623,172 @@
   background: hsla(240, 5%, 20%, 0.8);
 }
 
+.container_songGuessing {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: auto;
+  width: 100%;
+  flex-direction: column;
+}
+
+.songGuessing_pp {
+  position: relative;
+  box-sizing: content-box;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 20rem;
+  width: 20rem;
+  border-radius: 50%;
+  background-size: cover;
+  background-position: center;
+  box-shadow: 0px -3px 15px 3px rgba(255, 255, 255, 0.2), 0 0 10px rgba(255, 255, 255, 0.1);
+  background-color: transparent;
+}
+
+.songGuessing_pp::after {
+  position: absolute;
+  content: '';
+  width: 20rem;
+  height: 20rem;
+  border-radius: 50%;
+  background-image: url(/static/images/dvd2.png);
+  background-size: cover;
+  background-position: center;
+  background-size: 150%;
+  background-repeat: no-repeat;
+  opacity: 0.5;
+}
+
+
+.svg-container {
+  box-sizing: content-box;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 5rem;
+  width: 5rem;
+  border-radius: 50%;
+  background-color: var(--bg-color);
+  box-shadow: 0px -3px 15px 3px rgba(255, 255, 255, 0.2), 0 0 10px rgba(255, 255, 255, 0.1);
+  padding: 2rem;
+  z-index: 100;
+  cursor: pointer;
+  outline: solid 2px var(--spotifyColor);
+  transition: all 0.2s ease-in-out;
+}
+
+.svg-container:hover {
+  height: 6rem;
+  width: 6rem;
+}
+
+
+.svg-container:hover svg {
+  height: 90px;
+}
+
+.svg-container svg {
+  height: 80px;
+  color: var(--spotifyColor);
+  transition: all 0.2s ease-in-out;
+}
 
 
 
 
 
+.search-form {
+  position: relative;
+  height: 3.3rem;
+  width: clanp(20rem, 90%, 30rem);
+  margin-top: 9rem;
+}
 
+
+.ryuji_button {
+  width: 100%;
+  height: 100%;
+  border-radius: 0.5em;
+  padding: 0 4rem 0 4rem; 
+  background-color: var(--glass-color);
+  font-size: 1rem;
+  border: 0.13rem solid rgba(0, 155, 155, 0.7); 
+  outline-color: transparent;
+  color: var(--text-color);
+}
+
+.ryuji_button:focus {
+  outline: 0.155rem solid rgba(0, 155, 155, 0.7);
+  border: none;
+}
+
+#search-icon {
+  position: absolute;
+  top: 50%;
+  left: 1rem; 
+  transform: translateY(-50%); /* Flip on X axis, center Y axis */
+  transform-origin: center;
+  width: 1.5rem;
+  height: 1.5rem;
+  color: var(--glass-textColor);
+  pointer-events: none;
+  transition: color 0.2s, filter 0.2s; /* Smooth transition for glow effect */
+}
+
+#clear_button {
+  position: absolute;
+  top: 50%;
+  right: 1rem; 
+  transform: translateY(-50%); 
+  transform-origin: center;
+  width: 2rem;
+  height: 2rem;
+  opacity: 0.6;
+  color: var(--glass-textColor);
+  cursor: pointer; /
+}
+
+.ryuji_button:focus + #search-icon {
+  color: var(--search-iconColor); 
+  filter: var(--search-iconFilter);
+}
+
+
+
+
+.btn_callToAction { 
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 5rem;
+  width: fit-content;
+  border-radius: 5rem;
+  background: var(--spotifyColor);
+  color: var(--bg-color);
+  font-size: 2rem;
+  text-transform: uppercase;
+  font-weight: 600;
+  cursor: pointer;
+  margin: 10rem 0 5rem 0;
+  padding: 3rem;
+  margin-top: 15rem;
+}
+
+.btn_callToAction:hover {
+  background: var(--glass-color);
+  color: var(--spotifyColor);
+}
 
 /* .register_link_bot {
   display: flex;
   justify-content: center;
-  margin-top: 30rem;
+  margin-top: 5rem;
 } 
 
 .last_element_login {
@@ -648,15 +804,12 @@
 a.last_element_login:hover {
   color: var(--spotifyColor);
   opacity: 1 !important;
+} */
+
+body {
+  overflow-x: hidden;
 }
 
-
-@media screen and (max-width: 768px) {
-  
-  .register_link_bot {
-    margin-top: 15rem !important;
-  } 
-} */
 
 /* #playlist_image {
 max-width: 480px;
@@ -669,3 +822,23 @@ object-fit: cover;
 
 
 
+
+
+#greenWave {
+  position: absolute;
+  width: 50rem;
+  background-size: cover;
+  z-index: -10;
+  opacity: 0.4;
+  filter: drop-shadow(0 0 0.75rem rgba(121, 184, 21, 0.76));
+  animation: wave 10s infinite linear;  
+}
+
+@keyframes wave {
+  0% {
+    background-position: 0 0;
+  }
+  100% {
+    background-position: 100% 0;
+  }
+}
