--- a/templates/index.html
+++ b/templates/index.html
@@ -85,7 +85,7 @@
         
      </div> <!-- End of container grid -->
 
-     <hr class="bot_hr_wrapper">
+     <hr class="bot_hr_wrapper bot_hr_wrapper_1fr">
 
      <div class="wrapper_titleDescription wrapper_titleDescription_two">
       <h1 class="main_title"> ⚔️ Stream Battle: Guess the Top Track! ⚔️</h1>
