--- a/static/css/index.css
+++ b/static/css/index.css
@@ -648,7 +648,7 @@ body {
 .container_songGuessing {
   position: relative;
   display: flex;
-  justify-content: center;
+  justify-content: start;
   align-items: center;
   height: auto;
   width: 100%;
