--- a/static/css/index.css
+++ b/static/css/index.css
@@ -147,14 +147,34 @@ body {
 
 .wrapper_titleDescription h1.main_title {
   position: relative;
-  width: 90%;
-  max-width: 95%;
+  width: auto;
   font-weight: 600;
   line-height: 64px;
   font-size: 4rem;
+  padding-inline: 1rem;
   overflow-wrap: break-word;
   text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
 }
+
+.wrapper_titleDescription h1.main_title.oneT::before {
+  content: '🎵';
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translate(-100%, -50%);
+}
+
+
+.wrapper_titleDescription h1.main_title.oneT::after {
+  content: '🎵';
+  position: absolute;
+  right: 0;
+  top: 50%;
+  transform: translate(100%, -50%) scaleX(-1);
+}
+
+
+
 
 .wrapper_titleDescription .main_title > span#blur_text {
   filter: blur(5px);
@@ -360,7 +380,7 @@ body {
   justify-content: flex-end;
   width: 100%;
   height: 100%;
-  font-size: 4rem;
+  font-size: 3.5rem;
   text-transform: uppercase;
   text-align: left;
   padding-left: clamp(1rem, 10rem, 15rem);
@@ -413,6 +433,10 @@ body {
   .cardInfo_row2 .infoItem:nth-child(3) {
     transform: translateX(0%);
   }
+
+  .bot_hr_wrapper_1fr {
+    margin-top: 35rem;
+  }
 }
 
 
@@ -436,6 +460,10 @@ body {
   
   hr {
     margin-block: 2rem;
+  }
+
+  .bot_hr_wrapper_1fr {
+    margin-top: 10rem;
   }
   
   .containerCard_row1 {   
@@ -500,17 +528,25 @@ body {
   align-items: center;
   height: 100%;
   width: 100%;
-  /* font-family: ; */
 }
 
 .wrapper_videoBattle {
   position: relative;
-  width: 80%;
-  height: fit-content;
+  width: auto;
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
+  gap: clamp(10rem, 17rem, 20rem);
   margin-bottom: 7rem;
+  transform: all 1s ease-in-out;
+}
+
+.videos {
+  width: 400px;
+  height: 300px;
+  border: 1px solid rgba(255, 255, 255, 0.4);
+  object-fit: cover;
+  box-shadow: 0px -3px 15px 3px rgba(255, 255, 255, 0.2), 0 0 10px rgba(255, 255, 255, 0.1);
 }
 
 .vs_text {
@@ -523,42 +559,31 @@ body {
   color: var(--spotifyColor);
 }
 
-.video_item {
-  position: relative;
-  width: 400px; 
-  height: auto;
+
+@media screen and (max-width: 1000px) {
+  .videos {
+    width: 290px;
+    height: 250px;
+  }
 }
 
-.video_index {
-  position: absolute;
-  top: 1rem;
-  right: 1rem;
-  height: 3rem;
-  width: 3rem;
-  text-align: center;
-  font-size: 1.5rem;
-  font-weight: 600;
-  color: var(--spotifyColor);
-  background: var(--glass-color);
-  padding: 0.5rem;
-  border-radius: 50%;
-  z-index: 1;
-}
+@media screen and (max-width: 820px) {
 
-.video_indexB {
-  top: 1rem;
-  left: 1rem;
-}
+  .wrapper_videoBattle{
+    flex-direction: column;
+  }
 
+  .vs_text {
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) rotate(-5deg);
+  }
+  
 
-.videos {
-  width: 400px;
-  height: 300px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border: 1px solid rgba(255, 255, 255, 0.4);
-  box-shadow: 0px -3px 15px 3px rgba(255, 255, 255, 0.2), 0 0 10px rgba(255, 255, 255, 0.1);
+  .videos {
+    width: 340px;
+    height: 300px;
+  }
 }
 
 .video_description {
@@ -582,11 +607,33 @@ body {
   font-size: 1.8rem; 
 }
 
-@media screen and (max-width: 1500px) {
-  .wrapper_videoBattle {
-    display: none;
-  }
+
+
+.video_item {
+  position: relative;
+  width: 100%; 
+  height: auto;
 }
+
+.video_index {
+  position: absolute;
+  top: 1rem;
+  left: 1rem;  
+  height: 3rem;
+  width: 3rem;
+  text-align: center;
+  font-size: 1.5rem;
+  font-weight: 600;
+  color: var(--spotifyColor);
+  background: var(--glass-color);
+  padding: 0.5rem;
+  border-radius: 50%;
+  z-index: 1;
+}
+
+
+
+
 
 
 
@@ -644,25 +691,37 @@ body {
   }
 }
 
-
-.container_songGuessing {
+#container_songGuessing {
   position: relative;
   display: flex;
-  justify-content: start;
+  justify-content: center;
   align-items: center;
   height: auto;
   width: 100%;
-  flex-direction: column;
+  gap: 10rem;
 }
 
-.songGuessing_pp {
+@media screen and (max-width: 910px) {
+  #container_songGuessing {
+      gap: 5rem;
+  }
+}
+
+
+@media screen and (max-width: 710px) {
+  #container_songGuessing {
+    flex-direction: column;
+  }
+}
+
+#songGuessing_pp {
   position: relative;
   box-sizing: content-box;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 20rem;
-  width: 20rem;
+  height: 15rem;
+  width: 15rem;
   border-radius: 50%;
   background-size: cover;
   background-position: center;
@@ -670,7 +729,7 @@ body {
   background-color: transparent;
 }
 
-.songGuessing_pp::after {
+#songGuessing_pp::after {
   position: absolute;
   content: '';
   width: inherit;
@@ -685,13 +744,13 @@ body {
 }
 
 
-.svg-container {
+#svg-container {
   box-sizing: content-box;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 5rem;
-  width: 5rem;
+  height: 1.9rem;
+  width: 1.9rem;
   border-radius: 50%;
   background-color: var(--bg-color);
   box-shadow: 0px -3px 15px 3px rgba(255, 255, 255, 0.2), 0 0 10px rgba(255, 255, 255, 0.1);
@@ -702,28 +761,62 @@ body {
   transition: all 0.2s ease-in-out;
 }
 
-.svg-container:hover {
-  height: 6rem;
-  width: 6rem;
-}
-
-
-.svg-container:hover svg {
+#svg-container svg {
   height: 90px;
-}
-
-.svg-container svg {
-  height: 80px;
   color: var(--spotifyColor);
   transition: all 0.2s ease-in-out;
 }
+
+#svg-container.hover_state {
+  animation: pulse 1s ease-in-out infinite;
+}
+
+
+@keyframes pulse {
+  0% {
+    transform: scale(100%);
+  }
+  50% {
+    transform: scale(110%);
+  }
+  100% {
+    transform: scale(100%);
+  }
+}
+
+#wrapper_infoAndForm {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+
+#artistGuessInfo{
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 1.5rem;
+  letter-spacing: .4rem;
+  padding: 0 0 .5rem .5rem;
+  color: var(--text-secondary);
+}
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 .search-form {
   position: relative;
   height: 3.3rem;
   width: clanp(20rem, 90%, 30rem);
-  margin-top: 9rem;
 }
 
 
@@ -734,13 +827,13 @@ body {
   padding: 0 4rem 0 4rem; 
   background-color: var(--glass-color);
   font-size: 1rem;
-  border: 0.13rem solid rgba(0, 155, 155, 0.7); 
+  border: 0.13rem solid rgba(5, 189, 189, 0.7); 
   outline-color: transparent;
   color: var(--text-color);
 }
 
 .ryuji_button:focus {
-  outline: 0.155rem solid rgba(0, 155, 155, 0.7);
+  outline: 0.155rem solid var(--niceBlue);
   border: none;
 }
 
@@ -775,12 +868,32 @@ body {
   filter: var(--search-iconFilter);
 }
 
-#greenWave {
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* #greenWave {
   position: absolute;
-  width: 50rem;
+  width: 30rem;
   background-size: cover;
   z-index: -10;
-  opacity: 0.4;
+  opacity: 0.7;
   filter: drop-shadow(0 0 0.75rem rgba(121, 184, 21, 0.76));
 }
 
@@ -790,28 +903,8 @@ body {
   #greenWave {
     width: 30rem;
   }
-}
+} */
 
-@media screen and (max-width: 700px) {
-  #greenWave {
-    width: 23rem;
-  }
-
-  .svg-container {
-    height: 3rem;
-    width: 3rem;
-  }
-  
-  .svg-container:hover {
-    height: 5rem;
-    width: 5rem;
-  }
-
-  .songGuessing_pp {
-    height: 15rem;
-    width: 15rem;
-  }
-}
 
 .btn_callToAction { 
   position: relative;
@@ -829,9 +922,8 @@ body {
   text-transform: uppercase;
   font-weight: 600;
   cursor: pointer;
-  margin: 10rem 0 5rem 0;
+  margin: 7rem 0 5rem 0;
   padding: 3rem;
-  margin-top: 15rem;
 }
 
 
@@ -876,3 +968,14 @@ display: flex;
 justify-content: center;
 object-fit: cover;
 }  */
+
+
+
+
+
+
+
+
+
+
+
